# Simple-INI-Parser

./: .gitignore  LICENSE  Makefile  PKGBUILD  README.md  meson.build
Include/: SimpleIniParser.hpp
Include/simpleIniParser/: IniSection.hpp
Source/simpleIniParser/: Ini.cpp  IniOption.cpp
example/Creating/: Makefile
example/Creating/source/: main.cpp
example/Editing/: Makefile
example/Editing/source/: main.cpp
example/Magic/source/: main.cpp
example/Reading/: Makefile
example/Reading/romfs/: hekate_ipl.ini
example/Reading/source/: main.cpp
include/: SimpleIniParser.hpp  sini.hpp
include/SimpleIniParser/: Ini.hpp  IniOption.hpp  IniSection.hpp  IniStringHelper.hpp
include/sini/: ini.hpp  option.hpp  option_array.hpp  section.hpp
source/: ini.cpp  meson.build  option.cpp  section.cpp
source/SimpleIniParser/: Ini.cpp  IniHelper.cpp  IniOption.cpp  IniSection.cpp
